<resources>
    <string name="app_name">BonusHub</string>
    <string name="reversal_data_sync">Uploading reversal</string>
    <string name="reversal_upload_fail">Reversal Upload Fail</string>
    <string name="sending_reciving_data">Sending/Receiving data from host</string>
    <string name="sale_data_sync">Sending/Receiving From Host</string>
    <string name="authenticating_transaction_msg">Authenticating transaction</string>
    <string name="processing">Processing...</string>
    <string name="_1245678">123456789</string>
    <string name="_06_07_2020">02/12/2020</string>
    <string name="do_you_want_to_settle_batch">Do You Want To Settle Batch?</string>
    <string name="settlement_success">Settlement Success</string>
    <string name="batch_settle">Batch Settle</string>
    <string name="please_settle_batch">Please settle batch</string>
    <string name="please_wait_downloading_application_update">Please Don’t Turn Off the Device\nApplication Downloading in Progress</string>
    <string name="app_update">Application Update</string>
    <string name="app_update_available_do_you_want_to_update">App updates are available, Do you want to update?</string>
    <string name="something_went_wrong_in_app_update">Something went wrong\n In App Update</string>
    <string name="fallback">Fallback</string>
    <string name="please_use_another_option">Please use another option for Transaction</string>
    <string name="enter_tid_colon">Enter TID :</string>
    <string name="proceed_to_init">Proceed To Init</string>
    <string name="please_wait">Please Wait....</string>
    <string name="please_wait_host">Please Wait init Process Start....</string>
    <string name="successfull_init">INIT Successful</string>
    <string name="sending_receiving_host">Sending/Receiving From Host</string>
    <string name="merchant_name">ME Name  : </string>
    <string name="terminal_id">Terminal Id</string>
    <string name="re_enter_confirm">Re-Enter TID</string>
    <string name="tid">TID</string>
    <string name="merchant_id">MID</string>
    <string name="bank_functions">Bank Functions</string>
    <string name="settings">Settings</string>
    <string name="reports">Reports</string>
    <string name="help_desk_number_hint">Help Desk No: 0120252525</string>
    <string name="settlement">Settlement</string>
    <string name="versionHint">App Version: 02.01.01</string>
    <string name="please_wait_aaplication_is_configuring_updates">Please Wait Application is Configuring Updates....</string>
    <string name="back">Back</string>
    <string name="dashboard">Dashboard</string>
    <string name="bankEmi">Bank EMI</string>
    <string name="emi_catalogue">EMI CATALOGUE</string>
    <string name="brandEmiCatalogue">Brand EMI Catalogue</string>
    <string name="bankEmiCatalogue">BANK EMI CATALOGUE</string>
    <string name="brandEmi">Brand EMI</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>
    <string name="key_00">00</string>
    <string name="key_000">000</string>
    <string name="key_cancel">Cancel</string>
    <string name="key_delete">Delete</string>
    <string name="key_ok">OK</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_cash_amount">Enter Cash Amount</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_description_optional">Enter Description (optional)</string>
    <string name="calculate_and_compare_emi_offers"><![CDATA[Calculate & Compare EMI Offers:]]></string>
    <string name="compare_by_tenure">Compare Tenure</string>
    <string name="compare_by_bank">Compare Bank</string>
    <string name="issuer_icon">Issuer Bank Icon</string>
    <string name="select_tenure">1. Select Tenure:</string>
    <string name="select_banks_to_compare">2. Select Banks To Compare:</string>
    <string name="select_all_banks">Select All Banks</string>
    <string name="select_bank_to_compare_tenure">1. Select Bank To Compare Tenure</string>
    <string name="select_bank_to_compare">2. Select Bank To Compare</string>
    <string name="select_bank">Select Bank</string>
    <string name="unselect_all_banks">UnSelect All Banks</string>
    <string name="Proceed">Proceed</string>
    <string name="transactionAmountNew">Transaction \n Amount(\u20B9)</string>
    <string name="discountAmountNew">Discount \n Amount(\u20B9)</string>
    <string name="loanNew">Loan(\u20B9)</string>
    <string name="roiNew">Roi(%)</string>
    <string name="emiNew">Emi(\u20B9)</string>
    <string name="totalWithInterestNew">Total \n (With Int.)</string>
    <string name="cashbackNew">Cashback(\u20B9)</string>
    <string name="netCostNew">Net Cost(\u20B9)</string>
    <string name="additionalOfferNew">Add. Offer</string>
    <string name="tenure_hint">3 MONTHS</string>
    <string name="success_message">SUCCESS</string>
    <string name="success_transaction">Success Transaction</string>
    <string name="checked">Checked</string>
    <string name="selectAll">Select All</string>
    <string name="tenure">Tenure</string>
    <string name="please_select_one_or_multiple_issuer_banks">Please Select Issuer(s) Bank</string>
    <string name="please_select_tenure">Please select Tenure </string>
    <string name="please_select_one_issuer_bank">Please Select 1 Issuer Bank</string>
    <string name="total_amount_with_interest">Total Amount \n (With Interest)</string>
    <string name="emi_sale_with_card">EMI Sale with Card</string>
    <string name="Cardless_EMI">Cardless EMI</string>
    <string name="amex">AMEX</string>
    <string name="hdfc">HDFC</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="or">OR</string>
    <string name="_500_00">\u20B9 500.00</string>
    <string name="rupees_symbol">\u20B9</string>
    <string name="invoice">Invoice</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="continue_">Continue</string>
    <string name="_500">500</string>
    <string name="no_internet_available_please_check_your_internet">No Internet Available , Please check your Internet and try again</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pass_card_again"> Please tap card again </string>
    <string name="exception_prompt"> Exception prompt </string>
    <string name="error_prompt"> Error prompt </string>
    <string name="insert_pass_swipe_card"> Insert Swipe card </string>
    <string name="brand_name">Brand Name </string>
    <string name="searchBrand">Search</string>
    <string name="bank_functions_header">BANK FUNCTIONS</string>
    <string name="admin_vas_header">BH ADMIN</string>
    <string name="terminal_param_header">TERMINAL PARAM</string>
    <string name="init_payment_app_header">INIT PAYMENT APP</string>
    <string name="communication_param_header">COMMUNICATION PARAM</string>
    <string name="txn_param_header">TXN PARAM</string>
    <string name="app_update_param_header">APP UPDATE PARAM</string>
    <string name="admin_password">ADMIN PASSWORD</string>
    <string name="available_on">AVAILABLE ON</string>
    <string name="hint_enter_admin_password"><font size="10">ENTER ADMIN PASSWORD</font></string>
    <string name="super_admin_password">SUPER ADMIN PASSWORD</string>
    <string name="hint_enter_super_admin_password"><font size="10">ENTER SUPER ADMIN PASSWORD</font></string>
    <string name="invalid_password">Invalid Password</string>
    <string name="update">Update</string>
    <string name="please_clear_fbatch_before_init">Please clear FBatch before init</string>
    <string name="reversal_found_please_clear_or_settle_first_before_init">Reversal is found  , Please clear or settle it first before init</string>
    <string name="please_settle_batch_first_before_init">Please Settle Batch first and then Proceed with init</string>
    <string name="enter_terminal_id_must_be_valid_8digit">Entered Terminal ID must be a valid 8 character length</string>
    <string name="recoard_not_found">Recoard not found</string>
    <string name="test_emi">Test EMI TXN</string>
    <string name="bill_num">Enter bill number</string>
    <string name="brand_min_max_amt_limit_txn"><![CDATA[Entered Amount Should be in Product Min & Max Amount Range]]></string>
    <string name="enterValid_serial_iemei_no">Enter valid serial/IMEI no</string>
    <string name="enter_imei_number">Enter IMEI Number</string>
    <string name="enter_serial_number">Enter Serial Number</string>
    <string name="proceed">Proceed</string>
    <string name="default_amount">0.00</string>
    <string name="transaction_amount">Transaction Amount</string>
    <string name="txn_amount">Txn Amount</string>
    <string name="cash_amount">Enter Cash Amount (\u20B9)</string>
    <string name="tenure_interest_rate">Tenure Interest Rate</string>
    <string name="emi_amount">EMI Amount</string>
    <string name="total_emi">Total EMI</string>
    <string name="discount_amount">Discount Amount</string>
    <string name="emi_scheme_and_offer">Please Select EMI Scheme</string>
    <string name="select_scheme">"Select "</string>
    <string name="schemes">Scheme</string>
    <string name="cashback">CashBack Amount</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="total_interest_pay">Total Interest Pay</string>
    <string name="total_emi_pay">Total EMI Pay</string>
    <string name="please_select_scheme">Please Select Scheme</string>
    <string name="loan_amount">Loan Amount</string>
    <string name="roi_pa">ROI (p.a.)</string>
    <string name="app_name_2">BonusHub</string>
    <string name="settle_batch">Settle Batch</string>
    <string name="proceed_txn">Proceed Txn</string>
    <string name="printing_str">Printing.......</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="positive_button_ok">OK</string>
    <string name="do_you_to_print_summary_reports">Do you want to print summary reports?</string>
    <string name="transaction_type">Txn Type</string>
    <string name="do_you_want_to_print_customer_copy">Do You Want To Print Customer Copy?</string>
    <string name="alert">Alert</string>
    <string name="customer_copy_print_success">Customer copy print successfully</string>
    <string name="please_use_swipe_for_transaction">Please Swipe Card for Transaction</string>
    <string name="error_hint">Error</string>
    <string name="print_customer_copy">Print Customer Copy</string>
    <string name="print_merchant_copy">Print Merchant Copy</string>
    <string name="sms_upi_pay">SMS/UPI Pay</string>
    <string name="enter_valid_bill_number">Enter Valid Bill Number</string>
    <string name="printing">Printing....</string>
    <string name="printer_error">Printer Error</string>
    <string name="positive_button_yes">Yes</string>
    <string name="enterValid_serial">Enter valid serial number</string>
    <string name="enterValid_iemei_no">Enter valid IMEI number</string>
    <string name="emi_transaction">Emi Transaction</string>
    <string name="manual_entry">Manual Entry</string>
    <string name="please_insert_swipe_card">Please Insert/Swipe Card</string>
    <string name="please_insert_swipe">Please Insert/Swipe Card</string>
    <string name="please_swipe">Please Swipe Card</string>
    <string name="congratulations">Congratulations</string>
    <string name="emi_sale_hint">This transaction is eligible for Insta EMI.\nPlease select the option.</string>
    <string name="sale">Normal Sale</string>
    <string name="emi">Insta EMI</string>
    <string name="app_selection">App Selection</string>
</resources>