<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_margin="@dimen/pad_6"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/pad_15">
<RelativeLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/app_sel_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
android:padding="@dimen/pad_20"
        android:background="#DBE8F5"

        android:gravity="center"
        android:text="@string/app_selection"
        android:textColor="@color/txt_color"

        android:textSize="@dimen/text_size_xregular"
        app:fname="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/apps_Rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_sel_txt"
        android:scrollbars="vertical"

        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/apps_Rv"
        android:layout_margin="@dimen/pad_8">

        <Button
            android:id="@+id/cancel_btnn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/pad_16"
            android:layout_toStartOf="@+id/ok_btnn"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/cancel"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/ok_btnn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/key_ok"
            android:textColor="@color/white" />


    </RelativeLayout>


</RelativeLayout>

</com.google.android.material.card.MaterialCardView>
