<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/pad_5"
        android:background="@color/white"
        android:elevation="@dimen/pad_5"
        app:cardCornerRadius="@dimen/pad_5">

        <LinearLayout
            android:id="@+id/void_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_invoice_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/_1245678"
                android:padding="@dimen/pad_10"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_regular" />

            <TextView
                android:id="@+id/tv_base_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/_500"
                android:padding="@dimen/pad_10"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_regular" />

            <TextView
                android:id="@+id/tv_transaction_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/_500"
                android:padding="@dimen/pad_10"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_regular" />

            <TextView
                android:id="@+id/tv_transaction_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:gravity="center"
                android:hint="@string/_06_07_2020"
                android:padding="@dimen/pad_10"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_regular" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
